--- a/my-project/index-chapter5.html
+++ b/my-project/index-chapter5.html
@@ -3,29 +3,31 @@
 <head>
 <title>Oscars Rewritten</title>
   <meta charset="utf-8"/>
-<link href="css/styles.css" rel="stylesheet" type="text/css">
+<link href="css/styles-chapter5.css" rel="stylesheet" type="text/css">
+<link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
 </head>
-<body class="body">
+<body >
   <header>
-    <h1 class="page-title">Rewriting the History of the Academy Awards</h1>
-    <p id="opener">Every February, film buffs start scribbling up their lists predicting the nominees and winners for the upcoming Academy Awards, the premier awards ceremony celebrating the most accomplished films of the year. Unfortunately, the inevitable ends up happening every year, which sees the most well-received films amongst audiences and critics alike end up not making the cut, leading to public, and almost universal displeasure.</p>
+    <h1 class="header" id="my-id">Rewriting the History of the Academy Awards</h1>
+    <p class="body">Every February, film buffs start scribbling up their lists predicting the nominees and winners for the upcoming Academy Awards, the premier awards ceremony celebrating the most accomplished films of the year. Unfortunately, the inevitable ends up happening every year, which sees the most well-received films amongst audiences and critics alike end up not making the cut, leading to public, and almost universal displeasure.</p>
   </header>
   
   <div>
-	<p>The "Oscars", as they are colloquially referred to, are hosted by the Academy of Motion Picture Arts and Sciences (AMPAS), whose members vote for films over several categories related to individual filmmaking disciplines. This ultimately leads to the nomination of several films for each category, with one of the nominees being crowned the winner on the day of the ceremony.</p>
-    <figure id="image">
+	<p class="body">The "Oscars", as they are colloquially referred to, are hosted by the Academy of Motion Picture Arts and Sciences (AMPAS), whose members vote for films over several categories related to individual filmmaking disciplines. This ultimately leads to the nomination of several films for each category, with one of the nominees being crowned the winner on the day of the ceremony.</p>
+    <figure class="image">
       <img src="images/all-white-acting-nominations.jpeg" width="600" height="270" alt="All White Acting Nominees at 2016 Oscars"/>
     </figure>
   </div>
 	
-  <div class="my-container">
-	<p>The members of "The Academy" are comprised of 9,921 (as of 31 December 2019) filmmaking professionals spread across 17 branches, representing different disciplines in motion picture production. Around 9,599 of these are voting members, whose votes will dictate the outcome of the Academy Awards.</p>
-    <p>In recent years, the criticism has been directed at the Oscars for the lack of representation amongst nominees for people of color. Additionally, the Academy have also been accused of favoring male over female filmmakers, especially when it comes to the prestigious 'Best Director' category.</p>
-    <p>These issues, along with general, more light-hearted 'oscar snubs', are aspects of the Academy Awards of the last decade we intend to rewrite. So if you've found yourself disappointed by the results of Oscars past, or you just like reading about movies, then lose yourself in the revised history as devised by us at Oscars Rewritten.</p>
+  <div>
+	<p class="body">The members of "The Academy" are comprised of 9,921 (as of 31 December 2019) filmmaking professionals spread across 17 branches, representing different disciplines in motion picture production. Around 9,599 of these are voting members, whose votes will dictate the outcome of the Academy Awards.</p>
+    <p class="body">In recent years, the criticism has been directed at the Oscars for the lack of representation amongst nominees for people of color. Additionally, the Academy have also been accused of favoring male over female filmmakers, especially when it comes to the prestigious 'Best Director' category.</p>
+    <p class="body">These issues, along with general, more light-hearted 'oscar snubs', are aspects of the Academy Awards of the last decade we intend to rewrite. So if you've found yourself disappointed by the results of Oscars past, or you just like reading about movies, then lose yourself in the revised history as devised by us at Oscars Rewritten.</p>
   </div>  
   
   <footer>
-    <p>This website is brought to you by <a href="https://www.buas.nl">buas.nl</a></p>
+    <p class="body">This website is brought to you by <a href="https://www.buas.nl">buas.nl</a></p>
   </footer>
 </body>
 </html>
